# gadget-rust

./: .crom.toml  .dockerignore  .env  .gitignore  .release-manager.toml  .vsts-ci.yml  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  azure-pipelines.yml  diesel.toml  docker-compose.dev.yaml  docker-compose.prod.yaml  rust-toolchain.toml  worker.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
.docker/: musl-build.sh  musl-linux.Dockerfile
.github/: dependabot.yml
.github/workflows/: create-artifacts.yml  master.yml  on-main.yml  on-pull-request.yml  pr.yml  publish.yml
ci/: musl-build.sh  musl-builder.Dockerfile
data/caddy/: uuid
data/srv/: gadget.yaml
docker/: Caddy.dockerfile  Caddyfile
examples/: test1.yaml
gadget-cli/: Cargo.toml
gadget-cli/src/: main.rs
gadget-lib/: Cargo.toml
gadget-lib/src/: error.rs  lib.rs
gadget-lib/src/backend/: json.rs  memory.rs  mod.rs
gadget-local-ui/: package-lock.json  server.js
gadget-local-ui/views/: new.handlebars
gadget-local-ui/views/layouts/: main.handlebars
gadget-management/: settings.gradle  version.properties
gadget-management/gradle/: database.gradle  dependencies.toml
gadget-server/: .env  .gitignore  Cargo.toml  docker-compose.dev.yaml  docker-compose.yaml
gadget-server/dev-config/: otel-collector-config.yaml
gadget-server/migrations/2019-12-10-044022_initial_table_layout/: up.sql
gadget-server/public/: index.html
gadget-server/src/: admin.rs  handlers.rs  main.rs  redirect.rs  ui.rs
gadget-server/src/backend/: json.rs  mod.rs  models.rs  postgres.rs  schema.rs
gadget-server/src/db/: schema.rs
gadget-ui/: README.md  package.json  vue.config.js
gadget-ui/public/: index.html
gadget-ui/src/: App.vue  main.ts  redirect.ts
gadget-ui/src/assets/: custom.scss
gadget-ui/src/router/: index.ts
gadget-ui/src/views/: CreateRedirect.vue  DeleteRedirect.vue  EditRedirect.vue  RedirectList.vue
gadget-worker/: Cargo.toml  package.json  rust-toolchain.toml  wrangler.toml
gadget-worker/src/: lib.rs  storage.rs
migrations/2018-07-05-031621_init/: down.sql  up.sql
migrations/2019-12-10-044022_initial_table_layout/: down.sql
public/: home.handlebars  index.html  new.handlebars
resources/public/: 404.html
rust-applications/: Cargo.toml  Dockerfile
rust-applications/examples/: fetcher-example1.yaml
rust-applications/src/gadget/: config.rs  lib.rs  prelude.rs
rust-applications/src/gadget/config/: fetch.rs  mod.rs
rust-applications/src/gadget/fetcher/: mod.rs
rust-applications/src/gadget/manager/: config.rs  fetch.rs  mod.rs  pusher.rs
rust-applications/src/gadget/webserver/: config.rs  mod.rs
rust-server/: Cargo.toml  Dockerfile
rust-server/examples/: test1.yaml
rust-server/src/: main.rs
rust-server/src/config/: compile.rs  mod.rs
rust-server/src/webserver/: mod.rs
sample/: Caddyfile  data.json  fetcher.yaml  gadget.yaml
server/: Dockerfile  docker-compose.dev.yaml
server/crates/api/: Cargo.toml
server/crates/api/src/: lib.rs  redirect.rs  static_response.rs  test.rs
server/crates/api/src/endpoints/: api_actions.rs  api_def.rs  metrics.rs  mod.rs
server/crates/api/src/extractors/: mod.rs  user.rs
server/crates/api/src/models/: api.rs  mod.rs  server.rs
server/crates/backend/: Cargo.toml
server/crates/backend/src/: lib.rs  models.rs
server/crates/database/: Cargo.toml
server/crates/database/src/: lib.rs
server/crates/database/src/data_access/: mod.rs  model.rs
server/crates/database/src/entity/: external_user.rs  global_redirects.rs  global_usage.rs  mod.rs  prelude.rs  seaql_migrations.rs
server/crates/entrypoint/: Cargo.toml
server/crates/entrypoint/src/: entrypoint.rs  main.rs
server/crates/migration/: Cargo.toml
server/crates/migration/src/: lib.rs  m20220101_000001_create_table.rs
server/crates/test-utils/: Cargo.toml
server/crates/test-utils/src/: db_utils.rs  lib.rs
server/integation-tests/: load-data.sh
src/: admin.rs  handlers.rs  logging.rs  main.rs  redirect.rs  ui.rs
src/backend/: json.rs  mod.rs  models.rs  postgres.rs
src/config/: compile.rs
src/datasource/: memory.rs  mod.rs  mongo.rs  yaml.rs
src/datasource/sql/: mod.rs  models.rs  schema.rs
src/webserver/: gadget.rs  mod.rs  redirect.rs  util.rs
ui/: .dockerignore  README.md  index.html  package-lock.json  package.json  server.js  test1.yaml  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/assets/: custom.scss
ui/src/router/: index.ts
ui/src/views/: CreateRedirect.vue  DeleteRedirect.vue  EditRedirect.vue  RedirectList.vue
ui/views/: home.handlebars
