[package]
name = "gadget"
version = "99.9.999-SNAPSHOT"
authors = ["Ethan Hall <ethankhall@hall.sh>"]
edition = "2018"

[dependencies]
serde_yaml = "0.*"
serde_derive = "1.0"
serde = "1.0"
clap = { version = "2.32", features = ["yaml"] }
hyper = "0.12"
dotenv = "0.14"
kopy-common-lib = { git = "https://github.com/ethankhall/rust-shared.git", rev = "84a38d080b5a066c7443e6a46e043708d2a53f39" }
log = "*"
hotwatch = "0.4.1"
chrono = "0.4"

[dev-dependencies]
simple_logger = "1.2.0"