[package]
name = "api-server"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
clap = { version = "2.33" }
dotenv = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
flexi_logger = { version = "0.14", features = ["specfile", "ziplogs", "colors"] }
log = "0.4"
r2d2 = "0.8"
rand = "0.7"
lazy_static = "1.4"
prometheus = "0.7"
actix-rt = "1.0.0"
actix-web = "2.0.0-alpha.6"
serde_json = "1.0.44"