[package]
name = "gadget-cli"
version = "0.1.0"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
clap = { version = "3.2", features = [ "derive", "env" ] }
dotenv = "0.15"
futures-util = "0.3"
futures = "0.3"
url = "2.1"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
reqwest = { version = "0.11", features = [ "rustls-tls", "json" ] }
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
gadget-lib = { path = "../gadget-lib" }
tabled = "0.8.0"
human-panic = "1.0"
serde_json = "1.0"