[package]
name = "gadget-lib"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
tracing-timing = "0.5"
tracing-core = "*"
tracing-log = "0.1"
tracing = "0.1"
serde_json = "1.0"
urlencoding = "2.1"
url = "2.1"
thiserror = "1.0.34"