[package]
name = "gadget-lib"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
tracing-core = "*"
tracing-log = "0.1"
tracing = "0.1"
serde_json = "1.0"
urlencoding = "2.1"
url = "2.1"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasm-bindgen"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.8", features = ["getrandom"], default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }