[package]
name = "gadget"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2018"


[features]
default = ["postgres"]
postgres = ["diesel", "r2d2"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"], optional = true  }
clap = { version = "2.33" }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
flexi_logger = { version = "0.15", features = ["specfile", "ziplogs", "colors"] }
log = "0.4"
r2d2 = { version = "0.8", optional = true }
rand = "0.7"
lazy_static = "1.4"
prometheus = "0.12"
serde_json = "1.0"
futures-util = "0.3.15"
futures = "0.3.1"
mime_guess = "2.0.1"
url = "2.1.1"
warp = "0.3"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
env_logger = "0.7.1"