[package]
name = "gadget"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2018"


[features]
default = ["postgres"]
postgres = ["diesel", "diesel-tracing", "r2d2"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"], optional = true  }
diesel-tracing = { version = "0.1", features = ["postgres"], optional = true  }
clap = { version = "2.33" }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.2", features = ["registry"] }
tracing-opentelemetry = "0.15"
tracing-core = "*"
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
atty = "0.2"
tracing = "0.1"
r2d2 = { version = "0.8", optional = true }
rand = "0.7"
lazy_static = "1.4"
prometheus = { version = "0.12", features = ["process"] }
serde_json = "1.0"
futures-util = "0.3"
futures = "0.3"
mime_guess = "2.0"
url = "2.1"
warp = "0.3"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"