[package]
name = "gadget-worker"
version = "0.1.0"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
gadget-lib = { path = "../gadget-lib" }
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }