[package]
name = "gadget-server"
version = "99.9.999-SNAPSHOT"
authors = ["Ethan Hall <ethankhall@hall.sh>"]
edition = "2018"

[lib]
name = "gadget"
path = "src/gadget/lib.rs"

[dependencies]
serde_yaml = "0.*"
serde_derive = "1.0"
serde = "1.0"
clap = { version = "2.32", features = ["yaml"] }
hyper = "0.12"
dotenv = "0.14"
kopy-common-lib = { git = "https://github.com/ethankhall/rust-shared.git", rev = "84a38d080b5a066c7443e6a46e043708d2a53f39" }
log = "*"
hotwatch = "0.4.1"
chrono = "0.4"
reqwest = { version = "0.9", features = ["rustls-tls"] }
lazy_static = "*"
azure_sdk_storage_blob = "*"
azure_sdk_core = "*"
azure_sdk_storage_core = "*"
tokio-core = "0.1"
md5 = "0.6"
azure-functions = "0.10.0"
rusoto_s3 = "0.40.0"
rusoto_core = "0.40.0"
rusoto_credential = "0.40.0"

[dev-dependencies]
simple_logger = "1.2.0"