[package]
name = "gadget-api"
version = "0.0.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2021"


[features]
default = ["oauth2-proxy"]
allow-no-auth = []
oauth2-proxy = []

[dependencies]
serde = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
tracing-core = "*"
tracing = "0.1"
rand = "0.7"
lazy_static = "1.4"
prometheus = { version = "0.12", features = ["process"] }
serde_json = "1.0"
futures-util = "0.3"
futures = "0.3"
mime_guess = "2.0"
url = "2.1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
thiserror = "1.0"
anyhow = "1.0"
tracing-attributes = "0.1"
async-trait = "0.1.52"
sea-orm = { version = "0.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
gadget-database = { path = "../database" }
gadget-backend = { path = "../backend" }
# derive_builder = "0.10"
warp = "0.3.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "0.5.1"
json = "*"
gadget-test-utils = { path = "../test-utils" }