[package]
name = "gadget-backend"
version = "0.0.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
tracing-core = "*"
tracing = "0.1"
rand = "0.7"
lazy_static = "1.4"
serde_json = "1.0"
futures-util = "0.3"
futures = "0.3"
url = "2.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing-attributes = "0.1"
async-trait = "0.1.52"
sea-orm = { version = "0.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
gadget-database = { path = "../database" }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "0.5.1"
json = "*"